--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <section class="chamada">
         <div class="chamada-texto">
             <h1>Yoga Para Iniciantes: FLEXIBILIDADE, FORÇA, EQUILÍBRIO e FOCO para TODO O CORPO!</h1>
-            <p>#YOGA</p>
+            <p>#FLEXIBILIDADE</p>
+            <h2>Yoga para Iniciantes: FORTALECENDO e ALONGANDO o CORPO TODO!</h2>
+            <p>#FORÇA</p>
+            <h3>Yoga para Manhã: FLEXIBILIDADE MATINAL para o CORPO TODO</h3>
+            <p>#MANHÃ</p>
+            <h4>Yoga para Perder Peso: ENTRAR EM FORMA e EMAGRECER</h4>
+            <p>#EMAGRECER</p>
         </div>
 
         <div>
